clusters/beryjuio-home/loki/vs-loki.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: beryju-io-gw-loki
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: beryjuio-loki
      hosts:
        - loki.${CLUSTER_NAME}.k8s.beryju.io
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: beryju-io-vs-loki
  namespace: istio-system
spec:
  gateways:
    - beryju-io-gw-loki
  hosts:
    - loki.${CLUSTER_NAME}.k8s.beryju.io
  http:
    - route:
        - destination:
            host: loki.loki.svc.cluster.local
            port:
              number: 80
          weight: 100
